# ubb-projects

./: .gitignore  README.md
1st Semester/Computer Systems Arhitecture/Tools/: BuildTools.txt
1st Semester/Programming Fundamentals/Eliminatory Subjects/: main.py  subiect eliminatoriu.txt
1st Semester/Programming Fundamentals/First Practical/: asd.txt  main.py
1st Semester/Programming Fundamentals/Second Practical/: main.py
2nd Semester/Advanced Methods for Solving Algorithmic Problems/: CMakeLists.txt  complex.c  complex.h  main.c  matrix.c  operations.c  operations.h  polynomial.c  polynomial.h  scalar.h  trigonometry.c  utils.h  vector.h
3rd Semester/Advanced Programming Methods/Exam/: build.gradle  settings.gradle
3rd Semester/Databases/Practical Exam/: practic.sql
4th Semester/Artificial Intelligence/Laboratory1/: main.py
4th Semester/Artificial Intelligence/Laboratory10/: DataSet.py  KMeans.py  Main.py  Plotter.py  Trainer.py
4th Semester/Artificial Intelligence/Laboratory11/: Classifiers.py  Data.py  DataSet.py  Main.py  Plotter.py  Trainer.py
4th Semester/Artificial Intelligence/Laboratory2/: main.py  network.py  network_generator.py  network_operations.py  network_tester.py
4th Semester/Artificial Intelligence/Laboratory3/: genetic_algorithm.py  main.py  my_chromosome.py  my_network.py  network_operations.py  network_tester.py
4th Semester/Artificial Intelligence/Laboratory4-Optional/: aco.py  ant.py  main.py  (+2 more)
4th Semester/Software Engineering/: Diagrams.mdj  Documentation.docx  README.md
semester1/algebra/: materie examen.docx
(+2192 files in other folders)
